@@ -1,6 +1,7 @@
 2002-02-02 Terry Biggs <tbiggs@users.sourceforge.net>
 
 	* added editor to gbs
+	* made shortcut bar dockable
 	
 
 2002-02-01 Terry Biggs <tbiggs@users.sourceforge.net>
